Add(signage): サイネージページの静的版 (仮)

--- a/css/signage.css
+++ b/css/signage.css
@@ -16,31 +16,11 @@ body {
 	background: #eee;
 }
 
-li {
-	list-style: none;
-	margin: 0;
-	display: block;
-}
-.Content {
-	list-style: none;
-	width: 100%;
-	padding: 0;
-	margin: 0;
-}
-.Content li {
-	padding: 15px 15px;
-	border: 1px solid #ccc;
-	text-align: left;
-	border-width: 0;
-	border-top-width: 1px;
-	position: relative;
-	color: #333;
-}
-.Header, .Footer {
+header, footer {
 	padding: 0px;
 	margin: 0;
 }
-.Header li, .Footer li {
+header div, footer div {
 	padding: .7em 0px;
 	color: #fff;
 	text-align:center;
@@ -48,8 +28,30 @@ li {
 	text-shadow: 0 -1px 0 #222;
 }
 
-.boxs {
+li {
+	list-style: none;
+	margin: 0;
+	display: block;
+}
+
+.content {
+	list-style: none;
+	width: 100%;
+	padding: 0;
+	margin: 0;
+}
+.content li {
+	padding: 15px 15px;
+	border: 1px solid #ccc;
+	text-align: left;
+	border-width: 0;
+	border-top-width: 1px;
+	position: relative;
+	color: #333;
 	margin: 5px;
 	float: left;
-	list-style: none;	
+	list-style: none;
+}
+.content li.next-dia {
+	width: 90%;
 }
