--- a/css/mobile.css
+++ b/css/mobile.css
@@ -24,6 +24,27 @@ p, ul, li {
 	padding: 0 0 0 0;
 }
 
+ul {
+	min-height: 50px;
+}
+
+/**
+	読み込み中表示
+**/
+
+.load {
+	display: table-cell;
+	color: gray;
+	font-size: 200%;
+	height: 100%;
+	margin-top: 10px;
+	position: absolute;
+	text-align: center;
+	vertical-align: middle;
+	width: 100%;
+	z-index: 10000;
+}
+
 /**
 	カード
 **/
