--- a/templates/mobile/page_routes.html
+++ b/templates/mobile/page_routes.html
@@ -1,4 +1,7 @@
 <!-- Route list page (RoutesCtrl) -->
+<div class="load" ng-show="isLoading">
+	<i class="fa fa-circle-o-notch fa-spin"></i>
+</div>
 <ul class="routes">
 	<a ng-repeat="item in routes" ng-href="#/routes/{{item.id}}">
 		<li class="card" style="border-left: 2px solid {{item.color}};">
