Add(signage): 営業終了表示の追加

--- a/css/signage.css
+++ b/css/signage.css
@@ -34,14 +34,24 @@ li {
 	display: block;
 }
 
+/* メッセージ */
+
+.message {
+	text-align: center;
+}
+
+.message .end-day {
+	line-height: 1.3;
+}
+
+/* 便のブロック */
+
 .content {
 	list-style: none;
 	width: 100%;
 	padding: 0;
 	margin: 0;
 }
-
-/* 便のブロック */
 
 .content li {
 	padding: 15px 15px;
