--- a/templates/mobile/page_routes.html
+++ b/templates/mobile/page_routes.html
@@ -3,7 +3,7 @@
 	<i class="fa fa-circle-o-notch fa-spin"></i>
 </div>
 <ul class="routes">
-	<a ng-repeat="item in routes" ng-href="#/routes/{{item.id}}">
+	<a ng-repeat="item in routes" ng-href="#/routes/{{item.id}}" ng-show="item.numOfBusesOnDay != 0">
 		<li class="card" style="border-left: 2px solid {{item.color}};">
 			{{item.routePrefix}}&nbsp;{{item.routeName}}
 		</li>
