--- a/templates/mobile/page_timetable.html
+++ b/templates/mobile/page_timetable.html
@@ -10,17 +10,18 @@
 		{{route.diaName}}&nbsp;ダイヤ
 	</p>
 	<hr/>
-	<p class="next-bus"  ng-show="buses != null && buses.length == 0">
+	<p class="next-bus" ng-show="buses != null && buses.length == 0">
 		本日の営業は終了しました
 	</p>
 	<p class="next-bus" ng-show="nextBus != null" ng-class="{'soon' : nextBus.isSoon}">
 		<i class="fa fa-clock-o"></i>&nbsp;次の出発まで
-		<span >{{nextBus.remainDateStr}}</span>
+		<span>{{nextBus.remainDateStr}}</span>
 	</p>
 </div>
 <ul class="timetable">
 	<li class="card" ng-repeat="item in buses">
 		<span class="dep-time">{{item.departureDate | date:'HH:mm'}}</span>
+		<span class="dep-loc" style="font-size:smaller">{{route.departureLocation}} 発</span>
 		<span class="arr-loc">{{route.arrivalLocation}} 行</span>
 		<span class="note">{{item.note | substring:0:1}}</span>
 	</li>
