Change: サイネージに表示される終バス発車後のメッセージの変更と携帯からアクセスする各路線画面に表示される内容の変更

--- a/templates/mobile/page_timetable.html
+++ b/templates/mobile/page_timetable.html
@@ -20,9 +20,10 @@
 </div>
 <ul class="timetable">
 	<li class="card" ng-repeat="item in buses">
-		<span class="dep-time">{{item.departureDate | date:'HH:mm'}}</span>
-		<span class="dep-loc" style="font-size:smaller">{{route.departureLocation}} 発</span>
-		<span class="arr-loc">{{route.arrivalLocation}} 行</span>
+		<span class="dep-time">{{item.departureDate | date:'HH:mm'}} 発</span>
+		<span class="arr-time" style="font-size:smaller">{{route.arrivalDate | date:'HH:mm'}} 着予定</span>
+		<!--<span class="dep-loc" style="font-size:smaller">{{route.departureLocation}} 発</span>-->
+		<br><span class="arr-loc">{{route.arrivalLocation}} 行</span>
 		<span class="note">{{item.note | substring:0:1}}</span>
 	</li>
 </ul>
